--- a/static/estilo.css
+++ b/static/estilo.css
@@ -10,86 +10,83 @@ body {
     color: #333;
     line-height: 1.8;
     position: relative;
-    min-height: 100vh; /* Garante que a imagem de fundo cubra pelo menos a altura total da tela */
-    background-image: url('imagem.jpg'); /* Substitua pelo caminho correto da sua imagem */
-    background-size: cover; /* Cobrir toda a área disponível sem distorcer a imagem */
-    background-position: center; /* Centralizar a imagem de fundo */
-    background-repeat: no-repeat; /* Impedir que a imagem se repita */
-    background-attachment: fixed; /* Fixar a imagem de fundo durante o rolamento da página */
+    min-height: 100vh;
+    background-image: url('imagem.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 body::before {
     content: '';
-    position: fixed; /* Fixa o pseudo-elemento em relação à janela do navegador */
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(113, 113, 113, 0.6); /* Película escura com transparência */
-    backdrop-filter: blur(10px); /* Adiciona efeito de desfoque */
-    z-index: -1; /* Garante que a película fique atrás do conteúdo do body */
+    background-color: rgba(113, 113, 113, 0.6);
+    backdrop-filter: blur(10px);
+    z-index: -1;
 }
 
 form {
-    max-width: 100%;
-    margin: 0 auto;
+    width: 100%;
     background: none;
-    background: none;
-
 }
 
 .form-wrapper {
-    max-width: 60%; /* Largura do formulário + borda */
+    max-width: 60%;
     margin: 0 auto;
-    padding: 7px; /* Espessura da borda */
-    background: linear-gradient(to right, #eeeeee, #ffffff); /* Degradê das bordas */
-    border-radius: 40px 40px 10px 10px; /* Raio da borda + espessura da borda */
+    padding-left: 10px;
+    background: linear-gradient(to left, #eeeeee, #ffffff);
+    border-radius: 40px 40px 10px 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
     margin-top: 80px;
-    display: flex; /* Para centralizar o formulário */
+    display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 
 
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-right: 20px;
+    margin-right: 30px;
 }
 
 .form-group {
-    flex: 1; /* Faz com que cada form-group cresça igualmente */
-    min-width: 200px; /* Mínimo tamanho para quebra de linha em telas menores */
+    flex: 1;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
-    margin-left: 70px;
-    margin-right: 20px;
+    margin-left: 40px;
+    margin-right: 30px;
 }
 .form-group2 {
-    flex: 1; /* Faz com que cada form-group cresça igualmente */
-    min-width: 200px; /* Mínimo tamanho para quebra de linha em telas menores */
+    flex: 1; 
+    min-width: 200px;
     display: flex;
     flex-direction: column;
-    margin-left: 70px;
+    margin-left: 40px;
 }
 
 .form-group3 {
-    flex: 1; /* Faz com que cada form-group cresça igualmente */
-    min-width: 200px; /* Mínimo tamanho para quebra de linha em telas menores */
+    flex: 1;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
     margin-left: 10px;
 }
 
-/* Estilos específicos para ajustar a proporção */
+
 .form-group:first-child {
-    flex: 5; /* 3 partes do espaço disponível */
+    flex: 5;
 }
 
 .form-group:last-child {
-    flex: 5; /* 2 partes do espaço disponível */
+    flex: 5;
 }
 
 label {
@@ -97,9 +94,9 @@ label {
     display: block;
     padding-bottom: 2px;
     padding-top: 10px;
-    font-family: 'Poppins', sans-serif; /* Especifica a fonte Poppins */
-    font-weight: 400; /* Define uma espessura de negrito mais leve */
-    font-size: 20px; /* Adiciona um tamanho de fonte, ajuste conforme necessário */
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
 }
 input[type="text"],
 select,
@@ -111,33 +108,33 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 10px;
     box-sizing: border-box;
-    resize: vertical; /* Permite redimensionamento apenas na direção vertical */
-    font-size: 20px; /* Adiciona um tamanho de fonte, ajuste conforme necessário */
+    resize: vertical;
+    font-size: 20px;
 
 }
 .form-group input[type="submit"] {
-    font-family: 'Poppins', sans-serif; /* Especifica a fonte Poppins */
-    background-image: linear-gradient(to right, #005146, #005146); /* Gradiente das duas cores */
-    color: white; /* Texto branco para contraste */
-    padding: 12px 24px; /* Espaçamento interno */
-    border: none; /* Sem borda */
-    border-radius: 10px; /* Bordas arredondadas */
-    cursor: pointer; /* Cursor como ponteiro */
-    font-size: 16px; /* Tamanho da fonte */
-    font-weight: 700; /* Texto em negrito */
-    transition: background-image 0.3s, transform 0.2s; /* Transição suave para o gradiente e efeito de transformação */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Sombra para profundidade */
-    margin-top: 20px; /* Margem superior */
+    font-family: 'Poppins', sans-serif;
+    background-image: linear-gradient(to right, #005146, #005146);
+    color: white;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+    transition: background-image 0.3s, transform 0.2s;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    margin-top: 20px;
     margin-bottom: 30px;
 }
 
 .form-group input[type="submit"]:hover {
-    background-image: linear-gradient(to left, #005146, #005146); /* Inverte a direção do gradiente para dinamismo */
-    transform: scale(1.05); /* Aumenta ligeiramente o tamanho para efeito visual */
+    background-image: linear-gradient(to left, #005146, #005146);
+    transform: scale(1.05);
 }
 
 .form-group input[type="submit"]:active {
-    transform: scale(0.95); /* Diminui ligeiramente o tamanho ao pressionar, para efeito de clique */
+    transform: scale(0.95);
 }
 
 
@@ -165,53 +162,53 @@ textarea {
 
 .flex-container {
     display: flex;
-    justify-content: space-between; /* Espaça o conteúdo entre a esquerda e a direita */
-    align-items: center; /* Centraliza os itens verticalmente */
+    justify-content: space-between;
+    align-items: center;
 }
 
 .right-aligned-text {
-    text-align: right; /* Alinha o texto à direita */
-    font-size: 12px; /* Reduz o tamanho do texto para um estilo mais minimalista */
-    color: #6c757d; /* Cor cinza para o texto, sugerindo uma nota ou dica */
+    text-align: right;
+    font-size: 12px;
+    color: #6c757d;
 }
 
 
 .title-block {
     background-image: radial-gradient(circle at left, #e1d7aae7, #e1d7aa80);
-    padding: 10px 15px; /* Espaçamento interno para o título */
-    border-top-left-radius: 30px; /* Arredonda o canto superior esquerdo */
-    border-bottom-left-radius: 30px; /* Arredonda o canto inferior esquerdo */
-    border-top-right-radius: 0; /* Mantém o canto superior direito quadrado */
-    border-bottom-right-radius: 0; /* Mantém o canto inferior direito quadrado */
-    display: flex; /* Para alinhar ícone e texto */
-    align-items: center; /* Centraliza verticalmente o ícone com o texto */
-    justify-content: flex-start; /* Alinha os itens à esquerda */
+    padding: 10px 15px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     margin-bottom: 20px;
     margin-top: 40px;
     margin-left: 20px;
-    width: 95.7%; /* Estende o bloco de título para ocupar toda a largura disponível */
+    width: calc(100% - 25px - adicionado);
 }
 
 
 .title-block h2 {
-    margin: 0; /* Remove margem padrão do h2 */
-    font-size: 24px; /* Tamanho da fonte do título */
-    color: #3a3a3a; /* Cor do texto */
-    display: flex; /* Habilita o display flex no título para alinhar ícone e texto */
-    align-items: center; /* Centraliza verticalmente o ícone com o texto */
-    font-weight: 500; /* Diminui a espessura do negrito */
+    margin: 0;
+    font-size: 24px;
+    color: #3a3a3a;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
 }
 
 
 .title-block i.fas {
-    font-size: 20px; /* Tamanho do ícone */
-    margin-right: 10px; /* Espaço entre o ícone e o texto do título */
+    font-size: 20px;
+    margin-right: 10px;
     margin-left: 5px;
 }
 
 select#tipo_desafio {
-    font-family: 'Roboto', sans-serif; /* Substitua 'Roboto' pela fonte que você escolheu */
-    font-size: 16px; /* Aumente o tamanho da fonte conforme desejado */
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
     width: 100%;
     height: 185px;
     padding: 10px;
@@ -225,7 +222,7 @@ select#tipo_desafio {
 }
   
 .input-icon i {
-    color: #aaa; /* Cor discreta para o ícone */
+    color: #aaa;
 }
   
 .input-icon input[type="file"] {
@@ -244,83 +241,155 @@ select#tipo_desafio {
     border-radius: 10px;
     font-size: 16px;
     margin-top: 5px;
+    margin-bottom: 1rem;
     
 }
 
 .flex-row {
     font-family: 'Roboto', sans-serif;
     display: flex;
-    justify-content: space-between; /* Espaçamento entre os campos */
-    align-items: flex-start; /* Alinha os itens ao topo */
+    justify-content: space-between;
+    align-items: flex-start;
     gap: 40px;
 
   }
 
   .input-icon {
-    flex: 1; /* Faz com que ambos os campos cresçam igualmente */
-    margin: 0 0px 0 70px;
+    flex: 1;
+    margin: 0 0px 0 40px;
   }
 
   .form-group.input-icon2 {
-    flex: 1; /* Faz com que ambos os campos cresçam igualmente */
-    margin: 0 20px 0 0px;
+    flex: 1;
+    margin: 0 30px 0 0px;
   }
   
   .form-group.input-icon:first-child {
-    flex: 4; /* Dá mais espaço para o campo de anexo */
+    flex: 4;
 
   }
   
   .form-group.input-icon2:last-child {
-    flex: 3; /* Menos espaço para o campo de URL */
+    flex: 3;
     }
 
 
 .logo-container {
     display: flex;
-    justify-content: center; /* Centraliza horizontalmente */
-    align-items: center; /* Centraliza verticalmente */
-    margin-top: 30px; /* Espaço abaixo das logos */
-    flex-direction: column; /* Organiza os itens em coluna para centralização vertical */
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    flex-direction: column;
 }
 
 .logo-left, .logo-right {
-    display: block; /* Remove espaçamento extra abaixo da imagem */
-    max-width: 80%; /* Garante que a imagem não seja esticada além de sua largura máxima */
-    height: auto; /* Mantém a proporção da imagem */
-    object-fit: contain; /* Garante que a imagem seja contida dentro de suas dimensões sem ser cortada */
-    margin-bottom: 30px; /* Espaço abaixo das logos */
+    display: block;
+    max-width: 80%;
+    height: auto;
+    object-fit: contain;
+    margin-bottom: 30px;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
     .logo-left, .logo-right {
-        image-rendering: -webkit-optimize-contrast; /* Melhora a renderização da imagem no WebKit (Safari, Chrome) */
-        image-rendering: crisp-edges; /* Melhora a renderização da imagem em outros navegadores */
+        image-rendering: -webkit-optimize-contrast;
+        image-rendering: crisp-edges;
     }
 }
 
+
+
+
 h3 {
-    color: #3d3d3d; /* Cor do texto do cabeçalho */
-    font-family: 'Poppins', sans-serif; /* Fonte específica para o cabeçalho */
-    text-align: left; /* Centraliza o texto do cabeçalho */
-    padding-left: 30px;
-    padding-right: 30px;
-    margin-bottom: 0;
+    color: #3d3d3d;
+    font-family: 'Poppins', sans-serif;
+    text-align: left;
+    padding-left: 40px;
+    padding-right: 40px;
     margin-top: 70px;
+    font-size: 24px;
+}
+
+.headerh3 {
+    margin-bottom: 1rem;
 }
 
 h3 strong {
-    color: #005146; /* Cor do texto enfatizado no cabeçalho */
+    color: #005146;
 }
 
 p {
-    color: #333; /* Cor do texto do parágrafo */
-    font-size: 18px; /* Tamanho do texto do parágrafo */
-    line-height: 1.6; /* Espaçamento entre linhas do parágrafo */
-    margin: 0 auto; /* Centraliza o parágrafo horizontalmente */
-    text-align: justify; /* Justifica o texto do parágrafo */
-    padding-left: 30px;
-    padding-right: 30px;
-    font-family: 'Poppins', sans-serif; /* Fonte específica para o cabeçalho */
-    margin-bottom: 80px;
+    color: #333;
+    font-size: 20px;
+    line-height: 1.6; 
+    margin: 0 auto; 
+    text-align: justify;
+    padding-right: 40px;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 60px;
+    margin-left: 0;
+}
+
+
+
+.pheader {
+    margin-left: 40px;
+}
+
+.form-instructions2 {
+    color: #666; /* Cor discreta */
+    background-color: #D9D9D9;
+    width: 105%;
+    border-radius: 5px;
+    margin-bottom: 0.7rem;
+  }
+
+  .form-instructions {
+    color: #666; /* Cor discreta */
+    background-color: #D9D9D9;
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 0.7rem;
+  }
+
+  .form-instructions p {
+    line-height: 1.5;
+    margin: 0;
+    margin-left: 0;
+    width: 95%;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+  .form-instructions2 p {
+    line-height: 1.5;
+    margin: 0;
+    margin-left: 0;
+    width: 95%;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+
+  .form-instructions p strong {
+    color: #000; /* Cor mais destacada para o texto em negrito */
+    font-weight: bold;
+  }
+
+.checkbox-main-container {
+    display: flex;
+    justify-content: center; /* Centraliza o conteúdo horizontalmente */
+    width: 95%;
+    margin-left: 4;
+    padding-top:1rem;
+}
+
+.checkbox-container {
+    display: flex;
+    align-items: center; /* Alinha o checkbox e o label verticalmente */
+    text-align: left;
+}
+
+.custom-checkbox {
+    margin-right: 10px; /* Espaço entre o checkbox e o texto */
 }
