--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PRÊMIO CNA DE INOVAÇÃO 2024</title>
+    <title>PRÊMIO CNA DE INOVAÇÃO 2024 - ALYSSON PAOLINELLI</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.8" />
     <link
       rel="stylesheet"
@@ -25,6 +25,136 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <style>
+      /* Estilizações específicas para dispositivos móveis */
+      @media (max-width: 768px) {
+        body {
+          padding: 2rem 0px;
+          font-size: 14px;
+        }
+
+        label {
+          font-size: 15px;
+        }
+
+        .form-wrapper {
+          width: 90%; /* Aumenta a largura para 90% da tela */
+          max-width: 90%; /* Define uma largura máxima */
+          margin: 0 auto; /* Centraliza horizontalmente */
+          padding: 5px;
+          box-shadow: none;
+        }
+
+        .logo-container img {
+          width: 100%; /* Reduz o tamanho do logo */
+          margin-bottom: 0;
+        }
+
+        h3 {
+          font-size: 20px;
+          margin-top: 3rem;
+          margin-bottom: 0.5rem;
+        }
+
+        .title-block h2 {
+          font-size: 20px;
+        }
+
+        p {
+          font-size: 14px;
+        }
+
+        .form-group2 {
+          width: 96%;
+          margin-left: 2rem;
+        }
+
+        .form-group {
+          width: 90%; /* Garante que os inputs ocupem a largura total */
+          margin-left: 2rem;
+        }
+        .form-group3 {
+          width: 96%; /* Garante que os inputs ocupem a largura total */
+          margin-left: 2rem;
+        }
+        
+        .form-group.input-icon {
+          width: 85%;
+        }
+        .form-group.input-icon2 {
+          width: 90%; /* Garante que os inputs ocupem a largura total */
+          margin-left: 2rem;
+        }
+        .form-instructions2 {
+          color: #666; /* Cor discreta */
+          background-color: #D9D9D9;
+          width: 105%;
+          border-radius: 5px;
+          margin-bottom: 0.7rem;
+        }
+
+        .form-instructions {
+          color: #666; /* Cor discreta */
+          background-color: #D9D9D9;
+          width: 100%;
+          border-radius: 5px;
+          margin-bottom: 0.7rem;
+        }
+      
+        .form-instructions p {
+          line-height: 1.5;
+          margin: 0;
+          margin-left: 0;
+          width: 95%;
+          padding-left: 10px;
+          padding-bottom: 10px;
+          padding-top: 10px;
+        }
+        .form-instructions2 p {
+          line-height: 1.5;
+          margin: 0;
+          margin-left: 0;
+          width: 95%;
+          padding-left: 10px;
+          padding-bottom: 10px;
+          padding-top: 10px;
+        }
+      
+        .form-instructions p strong {
+          color: #000; /* Cor mais destacada para o texto em negrito */
+          font-weight: bold;
+        }
+
+
+        .row,
+        .flex-row {
+          flex-direction: column;
+          gap: 5px;
+          margin-bottom: 2rem;
+        }
+
+        .form-group input[type="text"],
+        .form-group input[type="url"],
+        .form-group select,
+        .form-group textarea {
+          max-width: 100%; /* Garante que os elementos de formulário não excedam a largura da tela */
+          box-sizing: border-box; /* Inclui padding e bordas na largura total */
+        }
+
+        .form-group input[type="submit"] {
+          width: auto;
+          padding: 10px 20px;
+          font-size: 16px;
+        }
+        .checkbox-main-container {
+          max-width: 95%;
+          padding-top:1rem;
+          border-top: solid 1px #D7D7D7;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="form-wrapper">
@@ -32,17 +162,20 @@
         <div class="logo-container">
           <img src="static/logo.png" alt="Logo Esquerda" class="logo-left" />
         </div>
-        <h3>
-          Bem-vindo ao processo de inscrição para o
+        <h3 class"headerh3">
+          Formulário de inscrição para o
           <strong>Prêmio CNA de Inovação 2024</strong>
         </h3>
-        <p>
-          O Prêmio CNA de Inovação 2024 homenageia Alysson Paolinelli e busca
-          promover inovações no agronegócio que abordem sustentabilidade e
-          eficiência. O prêmio incentiva projetos com excelência técnica e
-          viabilidade prática, visando a evolução positiva do setor. Os
-          participantes são convidados a detalhar suas inovações no formulário
-          para uma avaliação completa.
+        <p class="pheader">
+          Agregar valor à cultura organizacional do Sistema CNA/Senar/ICNA é um
+          dos objetivos desta premiação. Buscamos reconhecer e premiar o
+          profissional que mais se destacar na proposição de uma iniciativa
+          inovadora, estimulando o reconhecimento e a melhoria contínua das
+          atividades cotidianas e dos serviços prestados. Incentivamos os
+          funcionários a apresentarem propostas e iniciativas inovadoras que
+          contribuam para a melhoria de processos, produtos e serviços em suas
+          áreas/departamentos de atuação, premiando aquele que obtiver maior
+          destaque.
         </p>
         <div class="title-block">
           <h2><i class="fas fa-user"></i> Informações do Participante</h2>
@@ -52,9 +185,13 @@
           <input type="text" id="nome_desafio" name="nome_desafio" />
         </div>
         <div class="form-group">
-          <label for="responsavel">Responsável</label>
+          <label for="responsavel">Responsável pela proposta</label>
           <input type="text" id="responsavel" name="responsavel" />
         </div>
+        <div class="form-group">
+          <label for="email_usuario">E-mail</label>
+          <input type="text" id="email_usuario" name="email_usuario" />
+        </div>        
         <div class="row">
           <div class="form-group2">
             <label for="departamento">Departamento</label>
@@ -65,28 +202,27 @@
             </select>
           </div>
           <div class="form-group3">
-            <label for="area">Área</label>
-            <select id="area" name="area">
-              <option value="Jurídico">Jurídico</option>
-              <option value="RH">RH</option>
-              <option value="Administrativo">Administrativo</option>
-              <option value="Administrativo">Financeiro</option>
-              <option value="Assistência Técnica">Assistência Técnica</option>
-            </select>
+            <label for="area"
+              >Área (Jurídico, RH, Administrativo, Financeiro...)</label
+            >
+            <input type="text" id="area" name="area" />
           </div>
         </div>
         <div class="title-block">
-          <h2><i class="fas fa-bomb"></i> Informações do Desafio</h2>
+          <h2><i class="fas fa-bomb"></i>Sobre o Problema</h2>
         </div>
         <div class="form-group">
+          <div class="form-instructions">
+            <p>Descreva claramente seu problema ou oportunidade, o resultado esperado e sua importância. Especifique o desafio e os benefícios da sua solução.</p>
+          </div>
           <label for="descricao"
-            >Descrição detalhada sobre o problema ou oportunidade</label
+            >Descrição detalhada do problema/oportunidade (o quê)</label
           >
           <textarea id="descricao" name="descricao"></textarea>
         </div>
         <div class="form-group">
           <label for="resultado_esperado"
-            >Qual resultado você deseja alcançar</label
+            >Resultado esperado (o que está tentando atingir)</label
           >
           <textarea
             id="resultado_esperado"
@@ -94,12 +230,15 @@
           ></textarea>
         </div>
         <div class="form-group">
-          <label for="necessidade">Necessidade ou relevância</label>
+          <label for="necessidade"
+            >Necessidade ou relevância (motivo pelo qual queremos resolver esse
+            problema ou aproveitar essa oportunidade)</label
+          >
           <textarea id="necessidade" name="necessidade"></textarea>
         </div>
         <div class="form-group">
           <div class="flex-container">
-            <label for="tipo_desafio">Selecione o(s) tipo(s) de desafio:</label>
+            <label for="tipo_desafio">Selecione o(s) tipo(s) de desafio</label>
             <span class="right-aligned-text"
               >Ctrl+clique para múltiplas seleções</span
             >
@@ -116,51 +255,112 @@
             <option value="Outros">🔧 Outros</option>
           </select>
         </div>
+        <div class="title-block">
+          <h2><i class="fas fa-lightbulb"></i> Sobre a Solução</h2>
+        </div>
+      
         <div class="form-group">
+          <div class="form-instructions">
+            <p><strong>Explicação da Ideia:</strong> Resuma sua proposta, destacando a inovação e como ela soluciona o desafio. Seja breve e direto.</p>
+            <p><strong>Valor Agregado:</strong> Relate os benefícios para o Sistema CNA/Senar/ICNA ou produtores rurais. Enfatize o impacto positivo.</p>
+            <p><strong>Recursos Necessários:</strong> Liste os recursos necessários (financeiros, temporais, humanos) para a realização da sua ideia.</p>
+            <p><strong>Tentativas em Andamento:</strong> Se houver iniciativas relacionadas em progresso, descreva-as brevemente, incluindo estágio e resultados.</p>
+          </div>
+
           <label for="explicacao"
-            >Explique resumidamente sua ideia para resolver esse desafio</label
+            >Explique concisamente sua ideia para resolver esse desafio e por
+            que ela é inovadora</label
           >
           <textarea id="explicacao" name="explicacao"></textarea>
         </div>
         <div class="form-group">
-          <label for="valor_agregado">Como sua ideia agrega valor?</label>
+          
+          <label for="valor_agregado"
+            >Como sua ideia agrega valor ao Sistema CNA/Senar/ICNA e/ou aos
+            produtores rurais?</label
+          >
           <textarea id="valor_agregado" name="valor_agregado"></textarea>
         </div>
         <div class="form-group">
-          <label for="recursos">Recursos necessários</label>
+          <label for="recursos"
+            >Que recursos são necessários para transformar sua ideia em
+            realidade (financeiro, tempo, pessoal)?</label
+          >
           <textarea id="recursos" name="recursos"></textarea>
         </div>
         <div class="form-group">
-          <label for="tentativas">Tentativas de implementação</label>
+          <label for="tentativas"
+            >Há tentativas em andamento? Se sim, qual?</label
+          >
           <input type="text" id="tentativas" name="tentativas" />
         </div>
         <div class="title-block">
           <h2><i class="fas fa-upload"></i> Anexos</h2>
         </div>
-        <div class="flex-row">
-          <div class="form-group input-icon">
-            <label for="anexar_documentos">Anexar Documentos</label>
-            <input
-              type="file"
-              id="anexar_documentos"
-              name="anexar_documentos"
-              multiple
-            />
+        
+        <div class="flex-column"> <!-- Use flex-column para organizar os elementos verticalmente -->
+          <div class="form-group">
+            <div class="form-instructions"> <!-- Contêiner para o texto -->
+              <p>Anexar documentos, vídeos ou PDFs é opcional, mas pode destacar sua proposta. Use-os para mostrar claramente o valor da sua ideia.</p>
+            </div>
           </div>
-          <div class="form-group input-icon2">
-            <label for="link_materiais">Incluir Link de Materiais</label>
-            <input
-              type="url"
-              id="link_materiais"
-              name="link_materiais"
-              placeholder="https://..."
-            />
+          <div class="flex-row"> <!-- Contêiner para os inputs, ainda permite disposição em linha se necessário -->
+            <div class="form-group input-icon">
+              <label for="anexar_documentos">Anexar Documentos</label>
+              <input
+                type="file"
+                id="anexar_documentos"
+                name="anexar_documentos"
+                multiple
+              />
+            </div>
+            <div class="form-group input-icon2">
+              <label for="link_materiais">Incluir Link de Materiais</label>
+              <input
+                type="url"
+                id="link_materiais"
+                name="link_materiais"
+                placeholder="https://..."
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="checkbox-main-container">
+              <div class="checkbox-container">
+                <input type="checkbox" id="aceite_termos" name="aceite_termos" class="custom-checkbox" required>
+                <label for="aceite_termos" class="checkbox-label">
+                  Eu li e concordo com a <a href="URL_DA_POLITICA_DE_PRIVACIDADE" target="_blank">Política de Privacidade</a> do Sistema CNA/SENAR/ICNA e com o <a href="URL_DO_REGULAMENTO_DO_PREMIO" target="_blank">regulamento do prêmio</a>.
+                </label>
+              </div>
+            </div>
           </div>
         </div>
+             
         <div class="form-group">
           <input type="submit" value="Enviar" />
         </div>
       </form>
     </div>
+    <script>
+      document.addEventListener("DOMContentLoaded", (event) => {
+        const urlParams = new URLSearchParams(window.location.search);
+        const success = urlParams.get("success");
+        if (success) {
+          Swal.fire({
+            title: "Parabéns! Sua inscrição foi realizada com sucesso.",
+            html: `
+                      <p>Em breve, você receberá um e-mail com mais detalhes sobre sua inscrição, incluindo as próximas etapas do processo de avaliação e como acompanhar o status da sua proposta. Certifique-se de verificar sua caixa de entrada (e a pasta de spam, por precaução) para não perder nenhuma comunicação importante</p>
+                      <img src="URL_DA_SUA_IMAGEM" alt="Imagem Personalizada" style="width: 100px; height: auto;">
+                  `,
+            iconHtml:
+              '<img src="static/logo.png" alt="Ícone Personalizado" style="width: 50px; height: auto;">',
+            customClass: {
+              icon: "no-border",
+            },
+            confirmButtonText: "Ok",
+          });
+        }
+      });
+    </script>
   </body>
 </html>
